--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,56 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-.idea
+*/.idea
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+*/node_modules
+*/.pnp
+*/.pnp.js
 
-# testing
-/coverage
+*/coverage
 
-# production
-/build
+*/build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*/.DS_Store
+*/.env.local
+*/.env.development.local
+*/.env.test.local
+*/.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*/npm-debug.log*
+*/yarn-debug.log*
+*/yarn-error.log*
+
+*/target/
+*/!.mvn/wrapper/maven-wrapper.jar
+*/!**/src/main/**/target/
+*/!**/src/test/**/target/
+
+*/.idea/modules.xml
+*/.idea/jarRepositories.xml
+*/.idea/compiler.xml
+*/.idea/libraries/
+*/*.iws
+*/*.iml
+*/*.ipr
+
+*/.apt_generated
+*/.classpath
+*/.factorypath
+*/.project
+*/.settings
+*/.springBeans
+*/.sts4-cache
+
+*/nbproject/private/
+*/nbbuild/
+*/dist/
+*/nbdist/
+*/.nb-gradle/
+*/build/
+*/!**/src/main/**/build/
+*/!**/src/test/**/build/
+
+*/.vscode/
+
+*/.DS_Store
+
+*/.aws-sam/*
+*/.idea/*
