--- a/.gitignore
+++ b/.gitignore
@@ -20,18 +20,15 @@
 
 */target/
 **/*.jar
-*/.gradle/*
-*/gradle/*
-*/!**/src/main/**/target/
-*/!**/src/test/**/target/
+**/.gradle/*
+**/gradle/*
+**/!**/src/main/**/target/
+**/!**/src/test/**/target/
 
-*/.idea/modules.xml
-*/.idea/jarRepositories.xml
-*/.idea/compiler.xml
-*/.idea/libraries/
-*/*.iws
-*/*.iml
-*/*.ipr
+**/.idea/*
+**/*.iws
+**/*.iml
+**/*.ipr
 
 */.apt_generated
 */.classpath
